Fix alignment of sidebar 'x' close button on Mac OS X. Nit #14 of bug 79721.
(integrated from komodo (trunk) change 24136 by trentm)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@2329 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/mac/bindings/scrolltabs.css
+++ b/src/chrome/komodo/skin/plat/mac/bindings/scrolltabs.css
@@ -50,8 +50,6 @@ tab[type="file-tab"]
   list-style-image: url("chrome://global/skin/icons/closetab.png");
   -moz-appearance: none;
   border: none !important;
-  padding: 0 0 4px 0;
-  margin: 0;
   background: inherit;
   cursor: default;
 }
